--- a/stil.css
+++ b/stil.css
@@ -12,10 +12,20 @@ body {
 
 .cointainer {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     background-color: rgb(78, 82, 105);
     width: auto;
     height: 20rem;
-    padding: 100px;
-    justify-content: center;
+    padding: 25px;
     border: 2px solid black;
+}
+
+h1 {
+    margin: 0px;
+    padding-bottom: 2rem;
+}
+
+.form {
+    background-color: pink;
 }
