--- a/stil.css
+++ b/stil.css
@@ -13,7 +13,7 @@ body {
 .cointainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     background-color: rgb(78, 82, 105);
     width: auto;
     height: 20rem;
@@ -38,6 +38,20 @@ h1 {
     gap: 1rem;
 }
 
+.boxPassword{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-bottom: 10px;
+}
+
+.boxPasswordConfirm{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-bottom: 10px;
+}
+
 .nameInput {
     background-color: bisque;
 }
@@ -57,3 +71,28 @@ h1 {
     height: 20px;
     background-color: rgb(165, 42, 46);
 }
+
+.ckeckOkPassword.correct{
+    border-radius: 50%;
+    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(42, 165, 104);
+}
+
+.ckeckOkPassword.not{
+    border-radius: 50%;
+    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(165, 42, 56);
+}
+
+/*
+.paswordInputConfirm.not{
+    border-color: brown;
+}
+
+.paswordInputConfirm.right{
+    border-color: rgb(42, 165, 50);
+}*/
